--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,6 @@
         android:text = "@string/on_off"
         android:textSize="30sp"
         android:layout_margin="20dp"
-        android:padding="20dp"
         android:background="@color/teal_200"
         />
     <androidx.appcompat.widget.AppCompatButton
@@ -24,7 +23,6 @@
         android:text = "@string/enable_discoverability"
         android:textSize="30sp"
         android:layout_margin="20dp"
-        android:padding="20dp"
         android:background="@color/teal_200"
         />
     <androidx.appcompat.widget.AppCompatButton
@@ -34,7 +32,6 @@
         android:text ="@string/get_paired_devices"
         android:textSize="30sp"
         android:layout_margin="20dp"
-        android:padding="20dp"
         android:background="@color/teal_200"
         />
 
@@ -45,9 +42,38 @@
         android:text ="Get Scanned Devices"
         android:textSize="30sp"
         android:layout_margin="20dp"
-        android:padding="20dp"
         android:background="@color/teal_200"
         />
+    <TextView
+        android:id="@+id/device1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:layout_margin="5dp"
+        android:text="Paired"
+        android:textColor="#fff"
+        android:background="@color/black"/>
+    <TextView
+        android:id="@+id/device2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:layout_margin="5dp"
+        android:text="Paired"
+        android:textColor="#fff"
+        android:background="@color/black"/>
+    <TextView
+        android:id="@+id/device3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:layout_margin="5dp"
+        android:text="Paired"
+        android:textColor="#fff"
+        android:background="@color/black"/>
 
 
 </LinearLayout>
