--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:text = "@string/on_off"
         android:textSize="30sp"
-        android:layout_margin="20dp"
+        android:layout_margin="5dp"
         android:background="@color/teal_200"
         />
     <androidx.appcompat.widget.AppCompatButton
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:text = "@string/enable_discoverability"
         android:textSize="30sp"
-        android:layout_margin="20dp"
+        android:layout_margin="5dp"
         android:background="@color/teal_200"
         />
     <androidx.appcompat.widget.AppCompatButton
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:text ="@string/get_paired_devices"
         android:textSize="30sp"
-        android:layout_margin="20dp"
+        android:layout_margin="5dp"
         android:background="@color/teal_200"
         />
 
@@ -41,39 +41,14 @@
         android:layout_height="wrap_content"
         android:text ="Get Scanned Devices"
         android:textSize="30sp"
-        android:layout_margin="20dp"
+        android:layout_margin="5dp"
         android:background="@color/teal_200"
         />
-    <TextView
-        android:id="@+id/device1"
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/device_recycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="30sp"
-        android:layout_margin="5dp"
-        android:text="Paired"
-        android:textColor="#fff"
-        android:background="@color/black"/>
-    <TextView
-        android:id="@+id/device2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="30sp"
-        android:layout_margin="5dp"
-        android:text="Paired"
-        android:textColor="#fff"
-        android:background="@color/black"/>
-    <TextView
-        android:id="@+id/device3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="30sp"
-        android:layout_margin="5dp"
-        android:text="Paired"
-        android:textColor="#fff"
-        android:background="@color/black"/>
+        android:layout_height="wrap_content"/>
 
 
 </LinearLayout>
